# db-gui-tkinter

./: .gitignore  README.md  pyproject.toml
src/: UI.py  add.py  logic.py  main.py  models.py  queries.py  records_operations.py  table.py  windows.py
src/db/: models.py  queries.py
