[tool.poetry]
name = "postgres"
version = "1.0.0"
description = "SQLAlchemy GUI interface for PostgreSQL"
authors = ["Mikołaj Nadra <m.nadra@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.34"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
